--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,6 +19,7 @@ html {
 }
 
 main {
+    padding-top: 120px;
     min-height: 100vh;
 }
 
@@ -35,6 +36,7 @@ main {
     width: 100%;
     top: 0;
     left: 0;
+    z-index: 10000;
 }
 
 .cabecera__logo {
@@ -180,6 +182,26 @@ main {
     background-color: #000;
     color: #ffffff;
     padding: 32px;
+}
+
+/* Seccion Cursos  */
+
+.seccion-cursos {
+    background-color: yellow;
+    min-height: 100vh;
+    padding: 50px 0;
+
+}
+
+.seccion-cursos h2 {
+    text-align: center;
+    margin-bottom: 60px;
+    font-size: 48px;
+}
+
+.carousel-item img {
+    height: 300px;
+    object-fit: cover;
 }
 
 @media (max-width:992px) {
