--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,6 +12,8 @@ a {
 
 ul {
     list-style: none;
+    padding-left: 0;
+    margin-bottom: 0;
 }
 
 html {
@@ -40,6 +42,7 @@ main {
 
 .cabecera__logo {
     width: 200px;
+    vertical-align: middle;
 }
 
 .navegacion__lista {
@@ -187,22 +190,42 @@ main {
 /* Seccion Cursos  */
 
 .seccion-cursos {
-    background-color: yellow;
+    /* background-color: yellow; */
     min-height: 100vh;
     padding: 100px 0;
 
 }
 
-.seccion-cursos h2 {
-    text-align: center;
+.seccion-cursos h2, .galeria h2 {
+    text-align: right;
     margin-bottom: 60px;
     font-size: 48px;
+    font-style: italic;
+}
+
+.separacion-filas {
+    margin-bottom: 32px;
+}
+
+.carousel-item {
+    max-height: 700px;
 }
 
 .carousel-item img {
-    height: 300px;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
+
+.seccion-form {
+    padding: 100px 0;
+}
+
+.iframe {
+    width: 100%;
+}
+
+
 
 @media (max-width:992px) {
     .cabecera {
